--- a/thymeleaf_demo/src/main/resources/templates/index.html
+++ b/thymeleaf_demo/src/main/resources/templates/index.html
@@ -3,8 +3,8 @@
     <meta content="text/html;charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link th:href="@{bootstrap/css/bootstrap.css}" rel="stylesheet"/>
-    <link th:href="@{bootstrap/css/bootstrap-theme.css}" rel="stylesheet"/>
+    <link th:href="@{bootstrap-3.3.7-dist/css/bootstrap.css}" rel="stylesheet"/>
+    <link th:href="@{bootstrap-3.3.7-dist/css/bootstrap-theme.css}" rel="stylesheet"/>
 </head>
 <body>
     <div class="panel panel-primary">
@@ -32,7 +32,7 @@
     </div>
     <script th:src="@{jquery-3.4.1.js}" type="text/javascript"></script>
     <!-- 2 -->
-    <script th:src="@{bootstrap/js/bootstrap.js}"></script>
+    <script th:src="@{bootstrap-3.3.7-dist/js/bootstrap.js}"></script>
     <!-- 2 -->
     <script th:inline="javascript">
         var single = [[${singlePerson}]];
